--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2024.05.24:
+* new: scripts/print_all_repo_workflows_from_last_backup_by_config.bat: script to print all repository workflows from the all latest backed up RestAPI JSON files using a config file
+* changed: _config/config.0.vars.in: file names is moved into system config
+* changed: README_EN.txt: readme update
+
 2024.05.23:
 * fixed: scripts: execution fixup
 * changed: improvements and preparations to be able to generate config files from backed up json files
