--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 2024.05.24:
+* changed: README.md: readme update
+
+2024.05.24:
 * new: scripts/gen_workflows_config_from_last_backup.bat: script to generate `workflows.lst` config file into `gen` subdirectory of the output config directory from the all latest backed up RestAPI JSON files using `repos-auth-with-workflows.lst` and `repos-with-workflows.lst` config files
 * changed: README_EN.txt: readme update
 * refactor: scripts: minor refactor
