--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2024.06.03:
+* new: scripts: `_7ZIP_BARE_FLAGS` environment variable, to be able to add `7zip` flags
+* new: _config/config.0.vars.in, scripts/backup_*_repo.bat: `MAKE_GIT_CLONE_TEMP_DIR_IN` config variable, to retarget `git clone` command temporary directory
+* new: _config/config.0.vars.in, scripts/backup_*_repo.bat: `MAKE_7ZIP_WORK_DIR_IN` config variable, to retarget `7zip` command temporary directory
+
 2024.05.31:
 * changed: README.md: git submodules notice
 
