--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 2024.06.04:
+* changed: scripts: backup_bare_*repo.bat, backup_checkouted_*repo.bat: avoid command line temporary directory remove on archive error
+
+2024.06.04:
 * fixed: scripts: backup_bare_*repo.bat, backup_checkouted_*repo.bat: missed to restore bare repo state after checkout, execution fixup
 * new: scripts: backup_bare_*repo.bat, backup_checkouted_*repo.bat: `-temp-dir <temp-dir>` option to retarget all temporary directories
 
